--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -31,101 +31,117 @@ body {
 }
 
 .search-container {
-  background: white;
-  padding: 10px 15px;
-  border-radius: 15px;
-  display: flex;
-  align-items: center;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.input-group {
-  width: 100%;
-}
-
-.form-control.no-border {
-  background-color: transparent;
-  border: none;
-  border-radius: 0;
-  box-shadow: none;
-  align-items: center;
-  align-items: center;
-}
-
-.form-control {
-  margin: 0;
-  padding: 0.5rem;
-}
-
-.my_events-btn {
-  width: 150px;
-  border-radius: 20px;
-  background: rgb(0, 0, 0);
-  border: 1px solid #000000;
-  color: #ffffff;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  margin-left: 10px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.3s ease;
+  border-radius: 20px;
+//   padding: 10px 15px;
+//   border-radius: 15px;
+//   display: flex;
+//   align-items: center;
+//   left: 50%;
+//   transform: translateX(-50%);
 }
 
-.my_events-btn:hover {
-  background-color: #FF7D26;
-  border: 1px solid #FF7D26;
-  color: #000000;
+.search-field {
+  background-color: white;
+  width: 300px;
+  border: 0;
+  border-radius: 20px 0 0 20px;
+  text-align: center;
+//   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+//   transition: background-color 0.3s ease;
+}
+
+.date-field {
+  background-color: white;
+  width: 40px;
+  border: 0;
+  text-align: center;
 }
 
 .search-btn {
-  width: 150px;
-  border-radius: 20px;
-  background: rgb(0, 0, 0);
-  border: 1px solid #000000;
-  color: #ffffff;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  margin-left: 10px;
-  text-align: center;
+  width: 300px;
+  color: white;
+  background-color: black;
   text-decoration: none;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.3s ease;
-  background-image: url('../images/Lupa.png');
-}
-
-.search-btn:hover {
-  background-color: #FF7D26;
-  background-image: url('../images/Lupa.png');
-  border: 1px solid #FF7D26;
-  color: #000000;
+  border: 0;
+  border-radius: 0 20px 20px 0;
+  width: 120px;
+  // box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  // transition: background-color 0.3s ease;
 }
 
 
-.field-btn {
-  width: 150px;
-  border-radius: 20px;
-  background: rgb(255, 255, 255);
-  border: 1px solid #ffffff;
-  color: #000000;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-right: 2px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.3s ease;
-  background-image: url('../images/Lupa.png');
-}
+// .input-group {
+//   width: 100%;
+// }
 
-.field-btn:hover {
-  background-color: #ffffff;
-  background-image: url('../images/Lupa.png');
-  border: 1px solid #FF7D26;
-  color: #000000;
-  transition: background-color 0.3s ease;
-}
+// .form-control.no-border {
+//   background-color: transparent;
+//   border: none;
+//   border-radius: 0;
+//   box-shadow: none;
+//   align-items: center;
+//   align-items: center;
+// }
+
+// .form-control {
+//   margin: 0;
+//   padding: 0.5rem;
+// }
+
+// .my_events-btn {
+//   width: 150px;
+//   border-radius: 20px;
+//   background: rgb(0, 0, 0);
+//   border: 1px solid #000000;
+//   color: #ffffff;
+//   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+//   margin-left: 10px;
+//   text-align: center;
+//   text-decoration: none;
+//   display: inline-flex;
+//   align-items: center;
+//   justify-content: center;
+//   transition: background-color 0.3s ease;
+// }
+
+// .my_events-btn:hover {
+//   background-color: #FF7D26;
+//   border: 1px solid #FF7D26;
+//   color: #000000;
+// }
+
+// .search-btn {
+//   width: 150px;
+//   border-radius: 20px;
+//   background: rgb(0, 0, 0);
+//   border: 1px solid #000000;
+//   color: #ffffff;
+//   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+//   margin-left: 10px;
+//   text-align: center;
+//   text-decoration: none;
+//   display: inline-flex;
+//   align-items: center;
+//   justify-content: center;
+//   transition: background-color 0.3s ease;
+//   background-image: url('../images/Lupa.png');
+// }
+
+// .search-btn:hover {
+//   background-color: #FF7D26;
+//   background-image: url('../images/Lupa.png');
+//   border: 1px solid #FF7D26;
+//   color: #000000;
+// }
+
+
+
+
+// .field-btn:hover {
+//   background-color: #ffffff;
+//   background-image: url('../images/Lupa.png');
+//   border: 1px solid #FF7D26;
+//   color: #000000;
+//   transition: background-color 0.3s ease;
+// }
