--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,20 +8,19 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <div class="search-container">
-        <%= form_with url: events_path, method: :get, id: "search-form", class: "d-flex" do %>
-          <div class="input-group">
-            <%= text_field_tag :query, params[:query], id: "search-query", class: "form-control field-btn", placeholder: "Nome do evento ou cidade", style: "width: 300px;" %>
-            <%= text_field_tag :date, params[:date], class: "form-control field-btn", placeholder: "Date", type: "date", style: "width: 250px;" %>
 
-            <%= button_tag type: "submit", name: "", class: "search-btn btn-success" do %>
+      <div class='search-container'>
+        <%= form_with url: events_path, method: :get, id: "search-form", class: "d-flex" do %>
+            <%= text_field_tag :query, params[:query], id: "search-query", class: 'form-control search-field', placeholder: "Pesquise um evento ou cidade" %>
+            <%= text_field_tag :date, params[:date], type: "date", class: 'form-control date-field' %>
+
+            <%= button_tag type: "submit", class: 'search-btn' do %>
               <i class="fa-solid fa-magnifying-glass"></i>
             <% end %>
-          </div>
         <% end %>
       </div>
 
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <script>
       document.getElementById("search-query").value = "";
     </script>
